# django-fast-auth

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
config/: settings.py
fast_auth/: forms.py  urls.py  utils.py  views.py
fast_auth/templates/fast_auth/: signup.html
